[package]
name = "filtering-service"
version = "0.1.0"
authors = ["Alakazam03 <vaibhav.045@iiitb.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rocket = "0.4.2"
#rocket_contrib = { version = "0.3.9", default-features = false, features = ["json"] }
#rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
serde = "1.0.99"
serde_json = "1.0.40"
serde_derive = "1.0.99"
dotenv = "0.14.1"
rust-crypto = "^0.2"
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket" }
keccak-hash = { git = "https://github.com/paritytech/keccak-hash" }
ethereum-types = "0.3"
tiny-keccak = "1.4.2"
rustc-hex = "1.0.0"
bitreader = "0.3.1"
arrayref = "0.3.5"
byteorder = "1.3.1"
hex = "0.3.2"
rusty-leveldb = "0.2.4"
merkletree-rs = "0.0.2"
lazy_static = "1.3.0"
once_cell = "0.1.8"
threshold-secret-sharing = "0.2"
shamir = "~1.0"
base64 = "0.10.1"
hyper = "0.12"
reqwest = "0.9.20"
recrypt = "0.8.1"
merkle_tree = "0.1.0"
bytes = "0.4.12"

[dependencies.rocket_contrib]
version  = "0.4.1"
features = ["json"]
merkle = "1.11.0"

